<resources>
    <string name="app_name">Monumental</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="sign_in_with_facebook">Continue with Facebook</string>
    <string name="message_loading">Loading…</string>
    <string name="error_password">Password must be at least 6 characters long.</string>
    <string name="error_email">Not a valid address.</string>
    <string name="message_sign_in_cancelled">Sign in attempt cancelled.</string>
    <string name="warning_sign_in_provider">Failed to sign in with third party provider</string>
    <string name="warning_sign_in_email">There was a problem signing in, please check your credential and your internet connection!</string>
    <string name="fb_login_protocol_scheme">fb372591466897067</string>

    <!-- Venue categories -->
    <string name="cat_monument">Monuments</string>
    <string name="cat_public_art">Public art</string>
    <string name="cat_stadium">Stadiums</string>
    <string name="cat_bridge">Bridges</string>
    <string name="cat_castle">Castles</string>
    <string name="cat_historic_site">Historic sites</string>
    <string name="cat_museum">Museums</string>
    <string name="cat_opera_house">Opera houses</string>
    <string name="cat_theatre">Theatres</string>

    <!-- Splash screen activity-->
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="cd_logo">Application logo</string>

    <!-- Home Activity-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--StartFragment-->
    <string name="cd_header">Header Image</string>
    <string name="message_journey_start">A new adventure is waiting just around the corner</string>
    <string name="message_journey_resume">Do you wish to continue?</string>
    <string name="message_journey_found">Looks like you have started a session %1$s.</string>
    <string name="ready">Ready</string>
    <string name="warning_gps_required">GPS access is required!</string>
    <string name="resume">Resume</string>
    <string name="start_new">Start new</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="day_ago">day ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="just_now">just now</string>

    <!--DetailsFragment-->
    <string name="label_select_radius">Adjust the search radius</string>
    <string name="label_limit_landmarks">Limit the number of landmarks</string>
    <string name="value_limit_default">10</string>
    <string name="cd_dec_val">Decrease value</string>
    <string name="cd_inc_val">Increase value</string>
    <string name="radius_default">1000 m</string>
    <string name="next">Next</string>
    <string name="grant">Grant</string>

    <!--CategoriesFragment-->
    <string name="label_choose_categories">What are you looking for?</string>
    <string name="placeholder_category_name">Category name</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="button_go">Go</string>
    <string name="message_none_selected">You must select at least one category!</string>

    <!--ResultFragment-->
    <string name="cancel">Cancel</string>
    <string name="label_retry">Retry</string>
    <string name="start">Start</string>
    <string name="warning_error_search">An error has occurred while looking for landmarks</string>
    <string name="venues_found">Found %1$d landmarks near your location.</string>
    <string name="label_ready_journey">Are you ready to embark on your journey?</string>
    <string name="button">Button</string>

    <!--GeofenceTransitionsService-->
    <string name="name_channel_geofence">Geofences</string>
    <string name="desc_channel_geofence">Sends a notification when near a landmark.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_error_message">An unexpected error has occurred!</string>

    <string name="geofencing_error_unknown">Unknown error: Geofence service is not available!</string>
    <string name="geofencing_error_unavailable">The service is not available, high accuracy location services not enabled!</string>
    <string name="geofencing_error_limit_reached">Geofence limit has been reached!</string>
    <string name="geofencing_error_pi_limit_reached">PendingIntent limit has been reached!</string>
    <string name="title_notification">Heads up!</string>
    <string name="content_notification">Found a landmark near you. Click here to take a photo…</string>
    <string name="default_web_client_id">4585234938-6dpf3tnfn8v6m2ma21ag30p31jf8n0mu.apps.googleusercontent.com</string>
    <string name="nav_arrow">Navigation Arrow</string>
    <string name="label_accept_photo">Use image</string>
    <string name="cd_photo_preview">Photo preview</string>
    <string name="label_capture_landmark">Capture landmark</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_placeholder">Title</string>
    <string name="desc_placeholder">Description</string>
    <string name="desc_photo_invalid">This doesn\'t seem right, make sure the photo is focused on the landmark!</string>
    <string name="desc_unrecognized_photo">Unable to recognize the landmark, make sure that its not obfuscated and it is visible in its entirety</string>
    <string name="title_unrecognized_photo">Error</string>
    <string name="message_error_detection">An unexpected error has occurred, check your network connection! \n Message: %1$s</string>
    <string name="message_landmark_discovered">You just discovered %1$s! You may now move on to your next landmark!</string>
    <string name="message_landmark_Saved">The landmark\'s data has been stored successfully, you may move on to the next one!</string>
    <string name="label_success">Success</string>
    <string name="message_oops">Oops…</string>
    <string name="message_no_landmarks">Could not find any new landmarks nearby. You may try adjusting the search parameters.</string>
    <string name="label_error">Error</string>
    <string name="label_target">Target: %1$s</string>
    <string name="label_distance">Your target is %1$.1f meters away</string>
    <string name="label_remaining">There are %1$d landmarks remaining in your session</string>
    <string name="label_hooray">Hooray!</string>
    <string name="message_session_finished">You have discovered all the landmarks in this session!</string>
    <string name="placeholder_target">Target name</string>
    <string name="placeholder_remaining">Remaining landmarks</string>
    <string name="placeholder_distance">Distance to target</string>
    <string name="take_photo">Take photo</string>
    <string name="label_save_progress">Save progress</string>
    <string name="message_error_basic">An unexpected error has occurred!</string>
    <string name="message_progress_saved">Your progress has been saved successfully!</string>
    <string name="label_good_job">Good job!</string>
    <string name="label_load">Sync session</string>
    <string name="message_no_session_found">No active session was found</string>
    <string name="message_error_operation">Couldn\'t perform operation, please check your internet connection!</string>
    <string name="message_error_signin">There was an error signing in, please check your credential and your internet connection!</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_show">Show</string>
    <string name="message_error_signup">Failed to create account. There might already be an account registered with this email or no internet connection is available.</string>
    <string name="number_placeholder">#1</string>
    <string name="interval_placeholder">Interval: 14/6/2019 – 17/6/2019</string>
    <string name="label_interval">Interval: %1$s - %2$s</string>
    <string name="label_landmarks">%1$d total landmarks</string>
    <string name="landmarks_placeholder">4 total landmarks</string>
    <string name="cd_session_info">Session info</string>
    <string name="message_no_sessions">No sessions started yet…</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_session_history">Session history</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_discovered">Landmarks discovered</string>
    <string name="title_image_capture">Image capture</string>
    <string name="title_session_history">Session history</string>
    <string name="label_now">Now</string>
    <string name="label_finish_session">Finish session</string>
    <string name="label_session_ended">Session data has been saved successfully.</string>
    <string name="label_warning">Warning</string>
    <string name="message_prompt_start">This will wipe all session progress as well as any active session backed up on the cloud. Do you wish to proceed?</string>
    <string name="label_yes">Yes</string>
    <string name="title_session_landmarks">Discovered landmarks</string>
    <string name="message_no_landmarks_discovered">No landmarks have been discovered in this session…</string>
    <string name="message_error_download_file">Failed to create download file…</string>
    <string name="message_save_failed">Failed to save image…</string>
    <string name="message_save_success">Image has been saved, you can now access it from your gallery!</string>
    <string name="cd_none_found">Not found icon</string>
    <string name="cd_none_started">None started icon</string>
    <string name="password_no_spec_char">Password must contain at least one special character and number</string>
    <string name="distance_meters">%1$d m</string>
</resources>
