<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingTop="48dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/side_nav_bar"
        android:paddingLeft="@dimen/activity_horizontal_margin">

    <ImageView
            android:id="@+id/image_header_profile"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/nav_header_desc"
            android:background="@drawable/rounded_outline"
            app:srcCompat="@drawable/ic_account_circle_white_24dp" />

    <TextView
            android:id="@+id/label_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/nav_header_title"
            android:visibility="gone" />

    <TextView
            android:id="@+id/label_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />

</LinearLayout>
