<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/content_root"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".session.setup.StartFragment">

    <ImageView
            android:id="@+id/header_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="48dp"
            android:src="@drawable/background_transparent_gradient"
            android:contentDescription="@string/cd_header"
            android:background="@drawable/image_header"
            android:transitionName="transition_header"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/label_start" />

    <TextView
            android:id="@+id/label_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/message_journey_start"
            android:textSize="32sp"
            android:lines="3"
            android:textColor="@color/secondary_text"
            android:textAlignment="center"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/label_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/message_journey_resume"
            android:textSize="32sp"
            android:textColor="@color/secondary_text"
            android:textAlignment="center"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_resume" />

    <ubb.thesis.david.monumental.common.FlatButton
            android:id="@+id/button_start_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ubb.thesis.david.monumental.common.FlatButton
            android:id="@+id/button_resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:invertColors="true"
            app:text="@string/resume"
            app:layout_constraintBottom_toTopOf="@+id/button_start_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>