<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="ubb.thesis.david.monumental.view.authentication.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/cd_logo"
                app:layout_constraintVertical_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/icon_logo_256" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:boxStrokeColor="@color/primary_dark"
                app:hintTextAppearance="@style/TextInputLayoutHintAppearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    app:errorText="@{viewModel.emailError}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                app:layout_constraintEnd_toStartOf="@+id/button_show_password"
                app:boxStrokeColor="@color/primary_dark"
                app:hintTextAppearance="@style/TextInputLayoutHintAppearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/sign_in"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    app:errorText="@{viewModel.passwordError}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:text="@string/label_show"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/password_input_layout"
                app:layout_constraintTop_toTopOf="@+id/password_input_layout"
                app:layout_constraintStart_toEndOf="@+id/password_input_layout" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/sign_up"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintEnd_toEndOf="@+id/button_show_password"
                app:layout_constraintStart_toStartOf="@+id/password_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>