<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   tools:context=".view.setup.CategoriesFragment">

    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:text="@string/label_choose_categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ListView
            android:id="@+id/list_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:scrollbars="none"
            android:divider="@null"
            android:dividerHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_select_all"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <ubb.thesis.david.monumental.common.FlatButton
            android:id="@+id/button_select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:text="@string/select_all"
            app:invertColors="true"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ubb.thesis.david.monumental.common.FlatButton
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:text="@string/next"
            android:transitionName="bottomButtonTransition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>